--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     
     <title>Jogo mata mosquito</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/jogo.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="jogo.js"></script>
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
-    <img src="./img/mosca.png" class="mosquito1">
+    <img src="mosca.png" class="mosquito1">
 </body>
 </html>
