--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="jogo.js"></script>
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
-    <img src="mosca.png" class="mosquito1">
+    <script>
+        posicaoRandomica()
+    </script>
 </body>
 </html>
