--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
     <script>
-        posicaoRandomica()
+        /*fazer com que o mosquito apareça randomicamente a 
+        partir de um itervalo de tempo (1000 mls = 1s)*/
+        setInterval(function(){
+            posicaoRandomica()
+        }, 1000)
     </script>
 </body>
 </html>
