--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <script src="jogo.js"></script>
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
+    <div class="painel">
+        <div class="vida">
+            <img src="coracao_vazio.png">
+            <img src="coracao_cheio.png">
+            <img src="coracao_cheio.png">
+        </div>
+        <div class="cronometro">
+            Tempo Restante ?
+        </div>
+    </div>
+
     <script>
         /*fazer com que o mosquito apareça randomicamente a 
         partir de um itervalo de tempo (1000 mls = 1s)*/
