--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body onresize="ajustaTamanhoPalcoJogo()">
     <div class="painel">
         <div class="vida">
-            <img src="coracao_vazio.png">
-            <img src="coracao_cheio.png">
-            <img src="coracao_cheio.png">
+            <img id="v1" src="coracao_cheio.png">
+            <img id="v2" src="coracao_cheio.png">
+            <img id="v3" src="coracao_cheio.png">
         </div>
         <div class="cronometro">
             Tempo Restante ?
