--- a/projetoWeb10-GameMataMosquito/index.html
+++ b/projetoWeb10-GameMataMosquito/index.html
@@ -3,15 +3,15 @@
 <head>
     
     <title>Jogo mata mosquito</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="jogo.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/jogo.js"></script>
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
     <div class="painel">
         <div class="vida">
-            <img id="v1" src="coracao_cheio.png">
-            <img id="v2" src="coracao_cheio.png">
-            <img id="v3" src="coracao_cheio.png">
+            <img id="v1" src="./img/coracao_cheio.png">
+            <img id="v2" src="./img/coracao_cheio.png">
+            <img id="v3" src="./img/coracao_cheio.png">
         </div>
         <div class="cronometro">
             Tempo Restante ?
