--- a/projetoWeb10-GameMataMosquito/index.html
+++ b/projetoWeb10-GameMataMosquito/index.html
@@ -23,12 +23,12 @@
 
     <script>
 
-        
+        document.getElementById('cronometro').innerHTML = tempo
         /*Fazer com que o mosquito apareça randomicamente a 
         partir de um itervalo de tempo (1000 mls = 1s)*/
-        setInterval(function(){
+        var criaMosca = setInterval(function(){
             posicaoRandomica()
-        }, 1000)
+        }, 2000)
     </script>
 </body>
 </html>
