--- a/projetoWeb10-GameMataMosquito/vitoria.html
+++ b/projetoWeb10-GameMataMosquito/vitoria.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Tela de Fim De Jogo</title>
+    <title>Tela de vitoria</title>
     <!-- CSS Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-center">
-                    <img src="./img/game_over.png">
+                    <img src="./img/vitoria.png">
                 </div>
             </div>
         </div>
