--- a/projetoWeb10-GameMataMosquito/jogo.html
+++ b/projetoWeb10-GameMataMosquito/jogo.html
@@ -3,6 +3,7 @@
 <head>
     
     <title>Jogo mata mosquito</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/jogo.js"></script>
 </head>
