--- a/projetoWeb10-GameMataMosquito/jogo.html
+++ b/projetoWeb10-GameMataMosquito/jogo.html
@@ -29,7 +29,7 @@
         partir de um itervalo de tempo (1000 mls = 1s)*/
         var criaMosca = setInterval(function(){
             posicaoRandomica()
-        }, 2000)
+        }, criaMosquitoTempo)
     </script>
 </body>
 </html>
