--- a/projetoWeb10-GameMataMosquito/fim_de_jogo.html
+++ b/projetoWeb10-GameMataMosquito/fim_de_jogo.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-dark btn-lg" onclick="window.location.href = 'jogo.html'">Reiniciar</button>
+                    <button type="button" class="btn btn-danger  btn-lg" onclick="window.location.href = 'index.html'">Menu</button>
                 </div>
             </div>
         </div>
