--- a/projetoWeb10-GameMataMosquito/index.html
+++ b/projetoWeb10-GameMataMosquito/index.html
@@ -15,6 +15,8 @@
                 alert('Selecione um nível para iniciar o jogo')
                 return false
             }
+
+            window.location.href = 'jogo.html?' + nivel
         }
     </script>
 </head>
@@ -37,7 +39,7 @@
                         <select class="form-control" id="nivel">
                             <option value="">-- Selecionar um nível --</option>
                             <option value="facil">Fácil</option>
-                            <option value="normal">Normal</option>
+                            <option value="normal">Médio</option>
                             <option value="dificil">Difícil</option>
                         </select>
                     </div>
